# LDT_PIK_23

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  launch_backend.sh  pyproject.toml  settings.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20230519_181526_initial_migration-7ea29d531ad2.py  20230528_002020_initial_migration-84883befe7aa.py  20230528_173114_initial_migration-5b9f21c7c299.py
backend/data/fittings_3d/: d110.stl  d50.stl  krestovina_odnopolosnaya-110x110x50x87 левая.stl  krestovina_odnopolosnaya-110x110x50x87 правая.stl  krestovina_odnopolosnaya-110x110x50x89.stl  krestovina_odnopolosnaya-110x110х110x87.stl  krestovina_odnopolosnaya-110x50x50x45.stl  otvod-110_50х87_back.stl  otvod-110x45.stl  otvod-110x87.stl  otvod-110x90.stl  otvod-110х45_out_50_left.stl  otvod-110х45_out_50_right.stl  otvod-110х87_out_50_up.stl  otvod-50x15.stl  otvod-50x30.stl  otvod-50x45.stl  otvod-50x87.stl  reduction-110x50.stl  reductionp-110x50.stl  troinik-110x110x87.stl  troinik-110x50x87.stl  troinik-110х110х45.stl  troinik-110х50х45.stl  troinik-50x50x45.stl  troinik-50x50x87.stl
backend/main/: run_server.py
backend/scripts/: init_db.py
backend/src/architecture_utils/: dxf.py
backend/src/db/: __init__.py  base_manager.py  common_sql_model.py  exceptions.py  main_db_manager.py  mixins.py
backend/src/server/: auth.py  auth_utils.py  common.py  constants.py  server.py
backend/src/trace_builder/: constants.py  coordinate_converter.py  geometry.py  graph_models.py  model.py  (+10 more)
(+263 files in other folders)
