[tool.poetry]
name = "pik"
version = "0.1.0"
description = ""
authors = ["Nikita Orekhov <nikanor97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.4"
sqlalchemy = "1.4.41"  # Version restricted by sqlmodel
python-dotenv = "^1.0.0"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.6"
sqlmodel = "^0.0.8"
loguru = "^0.7.0"
uvicorn = "^0.22.0"
uvloop = "^0.17.0"
asyncpg = "^0.27.0"
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
orjson = "^3.8.12"
ffmpeg-python = "^0.2.0"
types-aiofiles = "^23.1.0.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.0.1"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.7"
sqlalchemy-utils = "^0.41.1"
plotly = "^5.14.1"
pandas = "^2.0.1"
ezdxf = "^1.0.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
#stl = "^0.0.3"
vtkplotlib = "^2.1.0"
numpy-stl = "^3.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
#black = "22.3.0"
#isort = "5.10.1"
#mypy = "0.971"
#pre-commit = "2.13.0"
#pycln = "2.0.1"
#pytest = "7.1.3"
jinja2 = "^3.1.2"
pycln = "^2.1.3"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
